feat: add synced automatic breaks and landing
